--- a/lib/components/fo_app_layout/fo_app_layout_component.html
+++ b/lib/components/fo_app_layout/fo_app_layout_component.html
@@ -13,6 +13,7 @@
                                 <div label>{{category.title | phrase}}</div>
                                 <material-list-item
                                         *ngFor="let item of category.items"
+                                        [active]="isActive(item)"
                                         (click)="onNavigate(item)">
                                     <material-icon [icon]="item.icon" baseline></material-icon>&nbsp;{{item.label | phrase}}
                                 </material-list-item>
@@ -24,6 +25,7 @@
                                 <div
                                         *ngFor="let item of category.items"
                                         class="clickable text-center padding-top-small padding-bottom-small mini-item"
+                                        [class.active]="isActive(item)"
                                         [materialTooltip]="item.label | phrase"
                                         (click)="onNavigate(item)">
                                     <material-icon [icon]="item.icon" size="x-large" baseline></material-icon>
@@ -67,7 +69,8 @@
 <fo-modal
         title="{{'instructions' | phrase}}"
         *ngIf="instructionsModalVisible"
-        [(visible)]="instructionsModalVisible">
+        [whiteHeader]="true"
+        [visible]="instructionsModalVisible"
+        (visibleChange)="onInstructionsModalVisibleChange($event)">
     <iframe [attr.width]="calcIFrameWidth()" [attr.height]="calcIFrameHeight()" [src]="instructionsUrl" frameborder="0" allowfullscreen scrolling="no"></iframe>
 </fo-modal>
--->
