--- a/lib/components/fo_select/fo_select_component.html
+++ b/lib/components/fo_select/fo_select_component.html
@@ -65,6 +65,7 @@
 
 <fo-modal
         title="{{'information' | phrase}}"
+        [whiteHeader]="true"
         [(visible)]="tooltipModalVisible"
         [showCloseButton]="true">
     <p>{{tooltip | phrase}}</p>
