--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -50,6 +50,16 @@
                 <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
                 <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
             </td>
+            
+            <td *ngFor="let cell of asyncEvaluatedColumns.keys"
+                [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                (click)="onSort(cell)">
+                <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
+                <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
+                <material-icon baseline size="small" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
+            </td>
             <td *ngIf="showDeleteButtons" class="buttonCell"></td>
         </tr>
         </thead>
@@ -84,6 +94,12 @@
                 [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                 [class.hide-for-large]="largeHiddenCol.contains(cell)">
                 <span>{{evaluatedColumns[cell](data[key]) | phrase:false}}</span>
+            </td>
+            <td *ngFor="let cell of asyncEvaluatedColumns.keys"
+                [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                [class.hide-for-large]="largeHiddenCol.contains(cell)">
+                <span>{{asyncEvaluatedColumnsData[key][cell] | async | phrase:false}}</span>
             </td>
             <td *ngIf="showDeleteButtons" class="text-center">
                 <material-icon
