--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -89,7 +89,7 @@
                         size="medium">
                 </material-icon>
             </td>
-            <td *ngFor="let cell of evaluatedColumns.keys"
+            <td *ngFor="let cell of allEvaluatedColumns"
                 [class.hide-for-small]="smallHiddenCol.contains(cell)"
                 [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                 [class.hide-for-large]="largeHiddenCol.contains(cell)">
@@ -100,20 +100,7 @@
                         icon="check"
                         size="medium">
                 </material-icon>
-            </td>
-            <td *ngFor="let cell of asyncEvaluatedColumns.keys"
-                [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                [class.hide-for-large]="largeHiddenCol.contains(cell)">
-                <span *ngIf="!isBool(getAsyncEvaluatedColumn(key, cell) | async)">{{getAsyncEvaluatedColumn(key, cell) | async | phrase:false}}</span>
-                <material-icon
-                        *ngIf="getAsyncEvaluatedColumn(key, cell) | async == true"
-                        baseline
-                        icon="check"
-                        size="medium">
-                </material-icon>
-                <span>{{getAsyncEvaluatedColumn(key, cell) | async | phrase:false}}</span>                
-            </td>
+            </td>                        
             <td *ngIf="showDeleteButtons" class="text-center">
                 <material-icon
                         class="clickable color-alert"
