BatchOperations are no longer sorted

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -194,6 +194,7 @@
                     [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
                     [options]="batchOperations"
                     [selectedId]="batchOperations.first.id"
+                    [sort]="false"
                     (actionButtonTrigger)="onBatchOperationTrigger($event)">
             </fo-select>
         </div>
