Added padding to modals

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -203,6 +203,7 @@
 
 <fo-modal
         title="{{'confirm' | phrase}}"
+        [smallPadding]="false"
         [visible]="deleteBufferId != null"
         (visibleChange)="deleteBufferId = null"
         [showCloseButton]="false"
@@ -224,6 +225,7 @@
 
 <fo-modal
         title="{{'information' | phrase}}"
+        [smallPadding]="false"
         [whiteHeader]="true"
         [(visible)]="infoModalOpen"
         [showCloseButton]="true">
