Fix padding on delete confirm modal

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -209,7 +209,7 @@
         [showCloseButton]="false"
         [whiteHeader]="true">
     <p>{{'are_you_sure_delete_this_resource' | phrase}}</p>
-    <p class="text-right margin-bottom-none">
+    <p class="text-right margin-bottom-none" footer>
         <material-button
                 raised
                 (trigger)="deleteBufferId = null">
