Resized tooltip icon

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -4,6 +4,7 @@
             {{label | phrase}}
             <material-icon
                     baseline
+                    size="large"
                     *ngIf="description != null"
                     icon="help_outline"
                     (click)="infoModalOpen = true"
