--- a/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
+++ b/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
@@ -1,4 +1,4 @@
-<fo-modal title="GDPR" [fixedWidth]="true" [visible]="open" (visibleChange)="open = $event; openController.add($event);"
+<fo-modal title="GDPR" [fixedWidth]="false" [visible]="open" (visibleChange)="open = $event; openController.add($event);"
     [whiteHeader]="false" [smallPadding]="false">
     <div *ngIf="open">
         <div *ngIf="!sent">
