Fixed issue with DataTableComponent::errorFunction

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -68,14 +68,14 @@
         <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex" (click)="onRowClickController.add(key)">
             <td *ngIf="showCheckboxes && data != null">
                 <material-checkbox
-                        [disabled]="errorFunction != null && errorFunction(data[key])"
+                        [disabled]="errorFunction != null && errorFunction(data[key]) != null"
                         [checked]="selectedRows.contains(key)"
                         (checkedChange)="onCheckedChange(key, $event)"
                         (click)="$event.stopPropagation()">
                 </material-checkbox>
             </td>
             <td *ngIf="errorFunction != null && data != null">
-                <material-icon *ngIf="errorFunction(data[key])" icon="warning" size="medium"></material-icon>
+                <material-icon *ngIf="errorFunction(data[key]) != null" icon="warning" size="medium"></material-icon>
             </td>
             <td
                     *ngFor="let cell of columns"
