--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -16,6 +16,7 @@ span#valueOutput
     display: inline-block;
     min-width: 2rem;
     text-align: center;
+    margin: 0 0.2rem;
 }
 
 material-button
